<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_words">Vocabulary</string>
    <string name="menu_parase">Phrase</string>
    <string name="menu_group">Group Verbs</string>
    <string name="menu_parts">Parts of Speech</string>
    <string name="menu_daily">Daily Backup</string>
    <string name="subscribe">Subscribe</string>
    <string name="menu_tools">Settings</string>
    <string name="menu_quiz">Quiz</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Other Options</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Dark Mode</string>
    <string name="attachment_title">Daily Backup</string>
    <string name="attachment_summary_on">Every night at 11.00 p.m all data will automatically backed up.
    </string>
    <string name="attachment_summary_off">Every night at 11.00 p.m all data will automatically backed up.</string>
    <string name="darkmode">Enable/DIsable Dark Mode</string>
    <string name="Walk">Walk Through</string>
    <string name="Voca">Vocabulary</string>
    <string name="add">Add Vocabulary</string>
    <string name="detail">Details</string>
    <string name="phrase">Phrases</string>
    <string name="adphrase">Add Phrase</string>
    <string name="parts">Parts of Speech</string>
    <string name="addparts">Add Parts of Speech</string>
    <string name="mainoptions">Main Options</string>
    <string name="backup">Back Up</string>
    <string name="Verb">Verb</string>
</resources>